fix: gaps between todo items

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,8 @@ body{
 }
 
 .new-todo {
-    width: 100%;
     padding: 1rem 0;
+    padding-left: 16px;
     border: none;
     font-size: 16px;
     background-color: #2a2a40;
@@ -65,6 +65,12 @@ body{
     border-bottom: 1px solid rgb(105, 105, 105);
 }
 
+.tasks-list {
+    list-style: none;
+    margin: 0;
+    padding: 1rem 0;
+    padding-left: 16px;
+}
 /*
 .tasks-list {
     width: 400px;
